--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ tracing = "0.1.41"
 reqwest = { version = "0.12.23",features = ["blocking"] }
 tokio = { version = "1.47.1", features = ["full"] }
 tracing-subscriber = "0.3.20"
+serde_json = { version = "1.0.143", features = ["alloc", "raw_value"] }
